fix some styling and post stuff

--- a/posts/2024/09-10-2024-gltest.md
+++ b/posts/2024/09-10-2024-gltest.md
@@ -283,4 +283,4 @@ but it should work on any platform that supports Erlang and WX, which should be 
 that [Scenic](https://github.com/ScenicFramework/scenic) has a specific driver for Nerves devices, so I wouldn't expect that would work
 out of the box, but I'd guess it works on MacOS.
 
-![Purple window](/images/09-10-2024-screenshot.png)
+![A working purple window](/assets/images/09-10-2024-screenshot.png)
